<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentCharIntroduction">

    <ScrollView
        android:id="@+id/scrollIntroduccion"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_style_generic"
            android:elevation="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/characterGachaSplash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/titleGeneralInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_info"
                style="@style/titleTextType"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/characterGachaSplash"/>
            <LinearLayout
                android:id="@+id/boxGeneralInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/titleGeneralInfo"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:id="@+id/generalInfoCharacterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bodyTextType"/>
                <TextView
                    android:id="@+id/generalInfoCharacterRarity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bodyTextType"
                    android:textColor="@color/estrellas"/>
                <TextView
                    android:id="@+id/generalInfoCharacterElement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bodyTextType"/>
                <TextView
                    android:id="@+id/generalInfoCharacterWeapon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bodyTextType"/>
                <TextView
                    android:id="@+id/generalInfoCharacterTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bodyTextType"/>
                <TextView
                    android:id="@+id/generalInfoCharacterAffiliation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bodyTextType"/>
                <TextView
                    android:id="@+id/generalInfoCharacterNation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bodyTextType"/>
                <TextView
                    android:id="@+id/generalInfoCharacterConstellation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bodyTextType"/>
                <TextView
                    android:id="@+id/generalInfoCharacterBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bodyTextType"/>
                <TextView
                    android:id="@+id/generalInfoCharacterDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bodyTextType"/>
            </LinearLayout>

            <TextView
                android:id="@+id/titleStatistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stats"
                style="@style/titleTextType"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/boxGeneralInfo"/>
            <LinearLayout
                android:id="@+id/boxStatistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/titleStatistics"
                android:orientation="vertical"
                android:padding="10dp">
                <TableLayout
                    android:id="@+id/tableStatistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="10dp">
                    <TableRow>
                        <TextView
                            android:id="@+id/tableLevelHead"
                            android:text="@string/level"
                            android:textAllCaps="true"
                            style="@style/bodyTextType"
                            android:textAlignment="center"
                            android:paddingHorizontal="10dp"/>
                        <TextView
                            android:id="@+id/tableHealthHead"
                            android:text="@string/table_hp"
                            style="@style/bodyTextType"
                            android:textAlignment="center"
                            android:paddingHorizontal="10dp"/>
                        <TextView
                            android:id="@+id/tableAttackHead"
                            android:text="@string/table_atk"
                            style="@style/bodyTextType"
                            android:textAlignment="center"
                            android:paddingHorizontal="10dp"/>
                        <TextView
                            android:id="@+id/tableDefenseHead"
                            android:text="@string/table_def"
                            style="@style/bodyTextType"
                            android:textAlignment="center"
                            android:paddingHorizontal="10dp"/>
                    </TableRow>
                </TableLayout>

            </LinearLayout>

            <!-- SEPARADOR INFERIOR -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="19dp"
                app:layout_constraintTop_toBottomOf="@id/boxStatistics"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>